Fixed layout issue on Modal.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -257,3 +257,7 @@ scientilla-multicheck .scientila-multicheck-commands-row {
 scientilla-external-documents .row {
     margin-top: 10px;
 }
+
+.scientilla-modal .btn {
+    margin-right: 5px;
+}
